--- a/home.html
+++ b/home.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home page</title>
-  </head>
-  <body>
-    <div>This is my home page</div>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Educhain</title>
+  <link rel="stylesheet" href="/student_network_2022/assets/css/main.css">
+  <link rel="icon" href="/student_network_2022/assets/icons/logoo.png" type="image/icon type">
+</head>
+<body>
+  <div class="container">      
+    <div class="island"></div>            
+  </div>
+  
+</body>
 </html>
