--- a/home.html
+++ b/home.html
@@ -1,17 +1,189 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Educhain</title>
-  <link rel="stylesheet" href="/student_network_2022/assets/css/main.css">
-  <link rel="icon" href="/student_network_2022/assets/icons/logoo.png" type="image/icon type">
-</head>
-<body>
-  <div class="container">      
-    <div class="island"></div>            
-  </div>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Educhain</title>
+    <link rel="stylesheet" href="/student_network_2022/assets/css/main.css" />
+    <link
+      rel="icon"
+      href="/student_network_2022/assets/icons/logoo.png"
+      type="image/icon type"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <div class="nav">
+        <p style="background-color: white">11:11AM</p>
+        <span class="island">adda</span>
+        <div class="top-icon" style="background-color: white">
+          <svg
+            style="background-color: white"
+            width="18"
+            height="18"
+            viewBox="0 0 18 18"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <mask
+              id="mask0_5_54"
+              style="mask-type: alpha"
+              maskUnits="userSpaceOnUse"
+              x="0"
+              y="0"
+              width="18"
+              height="18"
+            >
+              <rect width="18" height="18" fill="#D9D9D9" />
+            </mask>
+            <g mask="url(#mask0_5_54)">
+              <path
+                d="M3.75 15V10.5H6V15H3.75ZM8.25 15V6.75H10.5V15H8.25ZM12.75 15V3H15V15H12.75Z"
+                fill="#1C1B1F"
+              />
+            </g>
+          </svg>
+          <svg
+            style="background-color: white"
+            width="18"
+            height="18"
+            viewBox="0 0 18 18"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <mask
+              id="mask0_5_60"
+              style="mask-type: alpha"
+              maskUnits="userSpaceOnUse"
+              x="0"
+              y="0"
+              width="18"
+              height="18"
+            >
+              <rect width="18" height="18" fill="#D9D9D9" />
+            </mask>
+            <g mask="url(#mask0_5_60)">
+              <path
+                d="M4.7625 11.5125L3.1875 9.9C3.925 9.1625 4.79063 8.57812 5.78438 8.14688C6.77813 7.71563 7.85 7.5 9 7.5C10.15 7.5 11.2219 7.71875 12.2156 8.15625C13.2094 8.59375 14.075 9.1875 14.8125 9.9375L13.2375 11.5125C12.6875 10.9625 12.05 10.5312 11.325 10.2188C10.6 9.90625 9.825 9.75 9 9.75C8.175 9.75 7.4 9.90625 6.675 10.2188C5.95 10.5312 5.3125 10.9625 4.7625 11.5125ZM1.575 8.325L0 6.75C1.15 5.575 2.49375 4.65625 4.03125 3.99375C5.56875 3.33125 7.225 3 9 3C10.775 3 12.4312 3.33125 13.9688 3.99375C15.5063 4.65625 16.85 5.575 18 6.75L16.425 8.325C15.4625 7.3625 14.3469 6.60938 13.0781 6.06563C11.8094 5.52188 10.45 5.25 9 5.25C7.55 5.25 6.19063 5.52188 4.92188 6.06563C3.65313 6.60938 2.5375 7.3625 1.575 8.325ZM9 15.75L11.6438 13.0875C11.3063 12.75 10.9125 12.4844 10.4625 12.2906C10.0125 12.0969 9.525 12 9 12C8.475 12 7.9875 12.0969 7.5375 12.2906C7.0875 12.4844 6.69375 12.75 6.35625 13.0875L9 15.75Z"
+                fill="#1C1B1F"
+              />
+            </g>
+          </svg>
+          <svg
+            width="18"
+            height="18"
+            viewBox="0 0 18 18"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <mask
+              id="mask0_5_66"
+              style="mask-type: alpha"
+              maskUnits="userSpaceOnUse"
+              x="0"
+              y="0"
+              width="18"
+              height="18"
+            >
+              <rect width="18" height="18" fill="#D9D9D9" />
+            </mask>
+            <g mask="url(#mask0_5_66)">
+              <path
+                d="M3.75 12.75C3.5375 12.75 3.35938 12.6781 3.21563 12.5344C3.07188 12.3906 3 12.2125 3 12V10.5H1.5V7.5H3V6C3 5.7875 3.07188 5.60938 3.21563 5.46563C3.35938 5.32188 3.5375 5.25 3.75 5.25H15.75C15.9625 5.25 16.1406 5.32188 16.2844 5.46563C16.4281 5.60938 16.5 5.7875 16.5 6V12C16.5 12.2125 16.4281 12.3906 16.2844 12.5344C16.1406 12.6781 15.9625 12.75 15.75 12.75H3.75ZM4.5 11.25H9.75V6.75H4.5V11.25Z"
+                fill="#1C1B1F"
+              />
+            </g>
+          </svg>
+        </div>
+      </div>
+      <!-- Educhain logo with search and message buttons -->
+      <div class="nav-bar">
+        <!-- child1 -->
+        <div class="logo">
+          <div>
+            <img
+              src="/student_network_2022/assets/icons/logoLetter.png"
+              alt="logo"
+              width="118px"
+              ;
+              height="23px"
+            />
+            <p
+              width="32px"
+              height="15px"
+              left="128px"
+              top="75px"
+              style="font-size: 10px; margin-left: 80px"
+            >
+              Social
+            </p>
+          </div>
+        </div>
+        <!-- child2 -->
+        <div class="bottons">
+          <div class="search">
+            <img src="../student_network_2022/assets/icons/search.svg" alt="" />
+          </div>
+          <div class="email">
+            <img
+              src="../student_network_2022/assets/icons/mark_email_unread.svg"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
+      <!-- /content -->
+      <div class="parent">
+        <div class="card-header">
+          <div class="profile">
+            <img
+              src="/student_network_2022/assets/images/Profile.png"
+              alt="profile"
+              width="40px"
+              height="40px"
+            />
+            <div>
+              <p>Dara VEASNA</p>
+              <p style="font-size: 12px; color:rgb(143, 143, 143)">Phnom Penh, Cambodia</p>
+            </div>
+          </div>
+          <div>
+            <p style="font-size: 13px">27 Nov</p>
+          </div>
+        </div>
+        <p style="margin-left: 10px; text-align: justify; font-size: 15px; margin-right:10px; margin-bottom: 10px">
+          Missing you guys!  Just got done with the conference ... time for GIC at <span style="color: rgb(0, 136, 255); font-weight: bold">#ITC</span> 
+        </p>
+        <div>
+          <img
+            src="/student_network_2022/assets/images/page.png"
+            alt="poster1"
+            width="371px"
+            height="209px"
+          />
+        </div>
+        <div class="reaction">
+          <div class="emotion">
+            <div class="emotion-element">
+              <img style="width: 20px" src="../student_network_2022/assets/icons/chat_bubble.svg" alt="">
+              <p style="font-size:15px">404</p>
+            </div>
+            <div class="emotion-element">
+              <img style="width: 20px" src="../student_network_2022/assets/icons/favorite.svg" alt="">
+              <p style="font-size:15px">404</p>
+            </div>
+            <div class="emotion-element">
+              <img style="width: 20px" src="../student_network_2022/assets/icons/swap_calls.png" alt="">
+              <p style="font-size:15px">404</p>
+            </div>
+          </div>
+          <div>
+            <img src="../student_network_2022/assets/icons/star.svg" alt="">
+          </div>
+        </div>
+        
+      </div>
+    </div>
+  </body>
 </html>
