--- a/home.html
+++ b/home.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Educhain</title>
-    <link rel="stylesheet" href="/student_network_2022/assets/css/main.css" />
+    <link rel="stylesheet" href="./assets/css/main.css" />
     <link
       rel="icon"
-      href="/student_network_2022/assets/icons/logoo.png"
+      href="./assets/icons/logoo.png"
       type="image/icon type"
     />
   </head>
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="nav">
         <p style="background-color: white">11:11AM</p>
-        <span class="island">adda</span>
+        <span class="island"></span>
         <div class="top-icon" style="background-color: white">
           <svg
             style="background-color: white"
@@ -103,7 +103,7 @@
         <div class="logo">
           <div>
             <img
-              src="/student_network_2022/assets/icons/logoLetter.png"
+              src="/StudentNet/student_network_2022/assets/icons/logoLetter.png"
               alt="logo"
               width="118px"
               ;
@@ -138,26 +138,38 @@
         <div class="card-header">
           <div class="profile">
             <img
-              src="/student_network_2022/assets/images/Profile.png"
+              src="./assets/images/Profile.png"
               alt="profile"
               width="40px"
               height="40px"
             />
             <div>
               <p>Dara VEASNA</p>
-              <p style="font-size: 12px; color:rgb(143, 143, 143)">Phnom Penh, Cambodia</p>
+              <p style="font-size: 12px; color: rgb(143, 143, 143)">
+                Phnom Penh, Cambodia
+              </p>
             </div>
           </div>
           <div>
-            <p style="font-size: 13px">27 Nov</p>
+            <p style="font-size: 13px;">27 Nov</p>
           </div>
         </div>
-        <p style="margin-left: 10px; text-align: justify; font-size: 15px; margin-right:10px; margin-bottom: 10px">
-          Missing you guys!  Just got done with the conference ... time for GIC at <span style="color: rgb(0, 136, 255); font-weight: bold">#ITC</span> 
+        <p
+          style="
+            margin-left: 10px;
+            text-align: justify;
+            font-size: 15px;
+            margin-right: 10px;
+            margin-bottom: 10px;
+          "
+        >
+          Missing you guys! Just got done with the conference ... time for GIC
+          at
+          <span style="color: #1994ED; font-weight: bold">#ITC</span>
         </p>
         <div>
           <img
-            src="/student_network_2022/assets/images/page.png"
+            src="./assets/images/page.png"
             alt="poster1"
             width="371px"
             height="209px"
@@ -166,24 +178,94 @@
         <div class="reaction">
           <div class="emotion">
             <div class="emotion-element">
-              <img style="width: 20px" src="../student_network_2022/assets/icons/chat_bubble.svg" alt="">
-              <p style="font-size:15px">404</p>
+              <img
+                style="width: 20px"
+                src="../student_network_2022/assets/icons/chat_bubble.svg"
+                alt=""
+              />
+              <p style="font-size: 15px">404</p>
             </div>
             <div class="emotion-element">
-              <img style="width: 20px" src="../student_network_2022/assets/icons/favorite.svg" alt="">
-              <p style="font-size:15px">404</p>
+              <img
+                style="width: 20px"
+                src="../student_network_2022/assets/icons/favorite.svg"
+                alt=""
+              />
+              <p style="font-size: 15px">404</p>
             </div>
             <div class="emotion-element">
-              <img style="width: 20px" src="../student_network_2022/assets/icons/swap_calls.png" alt="">
-              <p style="font-size:15px">404</p>
+              <img
+                style="width: 20px"
+                src="../student_network_2022/assets/icons/swap_calls.png"
+                alt=""
+              />
+              <p style="font-size: 15px">404</p>
             </div>
           </div>
           <div>
-            <img src="../student_network_2022/assets/icons/star.svg" alt="">
+            <img src="../student_network_2022/assets/icons/star.svg" alt="" />
+          </div>
+        </div>
+      </div>
+        <div class="parent">
+          <div class="card-header">
+            <div class="profile">
+                <div class="event">
+                  <p>Suggest Events</p>
+                  <img src="../student_network_2022/assets/icons/verified.png" alt="">
+                </div>
+            </div>
+            <div>
+              <p style="font-size: 13px; color: #FF2E63">FRI, 26 - 27 May</p>
+            </div>
+          </div>
+          <p
+            style="
+              margin-left: 10px;
+              text-align: justify;
+              font-size: 15px;
+              margin-right: 10px;
+              margin-bottom: 10px;
+            "
+          >
+          <span>ពីព័រការងារ</span> | CamboJob Campus Career Fair 2023 
+            <span style="color: #1994ED; font-weight: bold">#Institute of Technology of Cambodia</span>
+          </p>
+          <div>
+            <img
+              src="../student_network_2022/assets/images/event.JPG"
+              alt="poster1"
+              width="371px"
+              height="209px"
+            />
+          </div>
+          <div class="reaction">
+            <div class="emotion">
+              <div class="emotion-element">
+                <img
+                  style="width: 20px"
+                  src="./assets/icons/award_star.png"
+                  alt=""
+                />
+                <p style="font-size: 15px">Interested</p>
+                <img src="./assets/icons/swap_calls.png" alt="">
+                <p style="font-size: 15px">Retweet</p>
+              </div>
+            </div>
+            <div>
+              <img src="../student_network_2022/assets/icons/unstar.svg" alt="" />
+            </div>
+          </div>
+          </div>
+          <div class="bottom-nav">
+            <img src="./assets/icons/public.svg" alt="">
+            <img src="./assets/icons/group.svg" alt="">
+            <img src="./assets/icons/logo-black.png" alt="" width="32px" >
+            <img src="./assets/icons/notification.svg" alt="">
+            <img src="./assets/icons/account_circle.svg" alt="" >
           </div>
         </div>
         
-      </div>
     </div>
   </body>
 </html>
