Update all png to svg

--- a/home.html
+++ b/home.html
@@ -196,7 +196,7 @@
             <div class="emotion-element">
               <img
                 style="width: 20px"
-                src="../student_network_2022/assets/icons/swap_calls.png"
+                src="../student_network_2022/assets/icons/swap_calls.svg"
                 alt=""
               />
               <p style="font-size: 15px">404</p>
@@ -212,7 +212,7 @@
             <div class="profile">
                 <div class="event">
                   <p>Suggest Events</p>
-                  <img src="../student_network_2022/assets/icons/verified.png" alt="">
+                  <img src="../student_network_2022/assets/icons/verified.svg" alt="">
                 </div>
             </div>
             <div>
@@ -244,11 +244,11 @@
               <div class="emotion-element">
                 <img
                   style="width: 20px"
-                  src="./assets/icons/award_star.png"
+                  src="./assets/icons/award_star.svg"
                   alt=""
                 />
                 <p style="font-size: 15px">Interested</p>
-                <img src="./assets/icons/swap_calls.png" alt="">
+                <img src="./assets/icons/swap_calls.svg" alt="">
                 <p style="font-size: 15px">Retweet</p>
               </div>
             </div>
