--- a/home.html
+++ b/home.html
@@ -103,7 +103,7 @@
         <div class="logo">
           <div>
             <img
-              src="/StudentNet/student_network_2022/assets/icons/logoLetter.png"
+              src="./assets/icons/logoLetter.png"
               alt="logo"
               width="118px"
               ;
@@ -123,11 +123,11 @@
         <!-- child2 -->
         <div class="bottons">
           <div class="search">
-            <img src="../student_network_2022/assets/icons/search.svg" alt="" />
+            <img src="./assets/icons/search.svg" alt="" />
           </div>
           <div class="email">
             <img
-              src="../student_network_2022/assets/icons/mark_email_unread.svg"
+              src="./assets/icons/mark_email_unread.svg"
               alt=""
             />
           </div>
@@ -180,7 +180,7 @@
             <div class="emotion-element">
               <img
                 style="width: 20px"
-                src="../student_network_2022/assets/icons/chat_bubble.svg"
+                src="./assets/icons/chat_bubble.svg"
                 alt=""
               />
               <p style="font-size: 15px">404</p>
@@ -188,7 +188,7 @@
             <div class="emotion-element">
               <img
                 style="width: 20px"
-                src="../student_network_2022/assets/icons/favorite.svg"
+                src="./assets/icons/favorite.svg"
                 alt=""
               />
               <p style="font-size: 15px">404</p>
@@ -196,14 +196,14 @@
             <div class="emotion-element">
               <img
                 style="width: 20px"
-                src="../student_network_2022/assets/icons/swap_calls.svg"
+                src="./assets/icons/swap_calls.svg"
                 alt=""
               />
               <p style="font-size: 15px">404</p>
             </div>
           </div>
           <div>
-            <img src="../student_network_2022/assets/icons/star.svg" alt="" />
+            <img src="./assets/icons/star.svg" alt="" />
           </div>
         </div>
       </div>
@@ -212,7 +212,7 @@
             <div class="profile">
                 <div class="event">
                   <p>Suggest Events</p>
-                  <img src="../student_network_2022/assets/icons/verified.svg" alt="">
+                  <img src="./assets/icons/verified.svg" alt="">
                 </div>
             </div>
             <div>
@@ -233,7 +233,7 @@
           </p>
           <div>
             <img
-              src="../student_network_2022/assets/images/event.JPG"
+              src="./assets/images/event.JPG"
               alt="poster1"
               width="371px"
               height="209px"
@@ -253,7 +253,7 @@
               </div>
             </div>
             <div>
-              <img src="../student_network_2022/assets/icons/unstar.svg" alt="" />
+              <img src="./assets/icons/unstar.svg" alt="" />
             </div>
           </div>
           </div>
